Start separate requirements.txt file for build/tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 before_install:
   - gem install foreman
-  - pip install pytest
+  - pip install -r dev_requirements.txt
 
 before_script:
   - foreman start &
