--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 python:
   - "2.7"
 
+addons:
+  chrome: stable
+
 services:
   - redis-server
 
@@ -15,4 +18,4 @@ before_script:
   - sleep 3
 
 script:
-  - py.test tests/test_app.py
+  - py.test --driver Chrome --base-url http://localhost:5000 --sensitive-url "utilityknife\.com" tests/
