--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 
+dist: xenial
+
 python:
   - "2.7"
 
@@ -8,6 +10,7 @@ addons:
 
 services:
   - redis-server
+  - xvfb
 
 before_install:
   - gem install foreman
@@ -19,11 +22,7 @@ before_install:
   - geckodriver --version
 
 before_script:
-  # https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-xvfb-directly
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - foreman start &
-  - sleep 3
 
 script:
   - py.test --driver Firefox --base-url http://localhost:5000 --sensitive-url "utilityknife\.com" tests/
